# lunchtalk

./: LICENSE  Readme.md  stack.yaml  wishes.curl  wishlist.cabal
src/: More.hs  Wishlist.hs  WishlistMT.hs  WishlistSimple.hs
src/Wishlist/: Types.hs  Utils.hs
src/Wishlist/Clients/: MultiTenant.hs  Simple.hs
src/Wishlist/Multitenant/: Client.hs
src/Wishlist/Simple/: Client.hs
src/Wishlist/Types/: Common.hs  MultiTenant.hs  Simple.hs
talk/: slides.md
