name:                wishlist
version:             0.1.0.0
synopsis:            A simple wishlist service built with servant
homepage:            https://www.github.com/bollmann/lunchtalk.git
license:             BSD3
license-file:        LICENSE
author:              Dominik Bollmann
maintainer:          dominikbollmann@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable wishlist
  main-is:             Wishlist.hs
  other-extensions:    TypeOperators
                     , DataKinds
                     , OverloadedStrings
                     , DeriveGeneric
  build-depends:       aeson
                     , base
                     , containers
                     , http-client
                     , mtl
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -main-is Wishlist

executable wishlist-simple
  main-is:             WishlistSimple.hs
  other-extensions:    TypeOperators
                     , DataKinds
                     , OverloadedStrings
                     , DeriveGeneric
  build-depends:       aeson
                     , base
                     , containers
                     , http-client
                     , mtl
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -main-is WishlistSimple

executable wishlist-mt
  main-is:             WishlistMT.hs
  other-extensions:    TypeOperators
                     , DataKinds
                     , OverloadedStrings
                     , DeriveGeneric
  build-depends:       aeson
                     , base
                     , containers
                     , http-client
                     , mtl
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -main-is WishlistMT
